[tool.poetry]
name = "ionex-generator"
version = "0.1.0"
description = "Converter of data from array to IONEX format."
authors = ["Artem Vesnin <artemvesnin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ionex_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
